# moto-with-python

./: README.md  docker-compose.yml  mypy.ini  pyproject.toml
docker/: Dockerfile
src/: OperateEc2Instance.py
tests/: test.py
