[tool.poetry]
name = "moto_practice"
version = "0.1.0"
description = ""
authors = ["user"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.2"
flake8 = "^3.8.2"
mypy = "^0.770"
boto3 = "^1.24.39"
moto = "^3.1.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
